--- a/templates/index.html
+++ b/templates/index.html
@@ -6,10 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Resume Parser</title>
     <style>
-        .container {
-            text-align: center;
-            margin-top: 100px;
-        }
+ 
     </style>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
@@ -19,44 +16,42 @@
     />
   </head>
   <body>
-    <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
-        <a class="navbar-brand" href="#">Navbar</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Nav</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-      
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="#">Home <span class="sr-only"></span></a>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="#">Home</a>
             </li>
-    
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Dropdown
-              </a>
-              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="#">Action</a>
-                <a class="dropdown-item" href="#">Another action</a>
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#">Something else here</a>
-              </div>
+            <li class="nav-item">
+              <a class="nav-link" href="#">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Contact</a>
             </li>
           </ul>
-          <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+          <form class="d-flex">
+            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success" type="submit">Search</button>
           </form>
         </div>
-      </nav>
-    <section class="pt-5 pb-1 mt-0 align-items-center d-flex bg-light bg-gradient" style="min-height: 250px; background-size: cover;">
-        <p class="text-center"></p>
+      </div>
+    </nav>
+    <section class="pt-5 pb-1 mt-0 align-items-center d-flex bg-light bg-gradient " style="min-height: 250px; background-size: cover;">
+      <div class="container text-center mt-5">
+      <p>something</p>
+      </div>
     </section>
     
-    <div class="container">
+    <section class="pt-5 pb-1 mt-0 align-items-center d-flex bg-light bg-gradient">
+    <div class="container text-center mt-5">
         <h1>Resume Parser</h1>
-        <form id="resumeForm" enctype="multipart/form-data">
-            <input class="form-control-file btn btn-outline-success my-2 my-sm-0" type="file" id="resumeFile" name="'resume" accept=".pdf,.doc.,.docx"/>
+        <form class="form-inline ml-auto" id="resumeForm" enctype="multipart/form-data">
+            <input class="form-control-file btn btn-outline-success my-2 my-sm-0" type="file" id="resumeFile" name="'resume" accept=".pdf,.docx"/>
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Parse Resume</button>
         </form>
     <div id="loading" style="display: none">
@@ -66,6 +61,12 @@
       <h2>Parsed Resume</h2>
       <ul id="resume-details"></ul>
     </div>
+  </section>
+  <section class="pt-5 pb-1 mt-0 align-items-center d-flex bg-light bg-gradient " style="min-height: 500px; background-size: cover;">
+    <div class="container text-center mt-5">
+    <p>something</p>
+    </div>
+  </section>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
