--- a/templates/index.html
+++ b/templates/index.html
@@ -16,40 +16,18 @@
     />
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">Nav</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link" href="#">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Contact</a>
-            </li>
-          </ul>
-          <form class="d-flex">
-            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success" type="submit">Search</button>
-          </form>
-        </div>
-      </div>
-    </nav>
-    <section class="pt-5 pb-1 mt-0 align-items-center d-flex bg-light bg-gradient " style="min-height: 250px; background-size: cover;">
-      <div class="container text-center mt-5">
-      <p>something</p>
+    <section class="pt-5 pb-1 mt-0 align-items-center d-flex bg-light bg-gradient " style="min-height: 300px; background-size: cover;">
+      <div class="container text-center mt-1">
+        <h1 class="mb-3">Resume Parser</h1>
+        <p class="mb-5">This resume parser accepts files in the form of .pdf and .docx. [Further explanation of backend.]</p>
+        <form class="d-flex">
+          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-success" type="submit">Search</button>
+        </form>
       </div>
     </section>
-    
-    <section class="pt-5 pb-1 mt-0 align-items-center d-flex bg-light bg-gradient">
-    <div class="container text-center mt-5">
-        <h1>Resume Parser</h1>
+    <section class="pt-5 pb-1 mt-0 align-items-center d-flex bg-light bg-gradient" style="min-height: 100px; background-size: cover;">
+    <div class="container text-center mt-1">
         <form class="form-inline ml-auto" id="resumeForm" enctype="multipart/form-data">
             <input class="form-control-file btn btn-outline-success my-2 my-sm-0" type="file" id="resumeFile" name="'resume" accept=".pdf,.docx"/>
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Parse Resume</button>
@@ -62,11 +40,7 @@
       <ul id="resume-details"></ul>
     </div>
   </section>
-  <section class="pt-5 pb-1 mt-0 align-items-center d-flex bg-light bg-gradient " style="min-height: 500px; background-size: cover;">
-    <div class="container text-center mt-5">
-    <p>something</p>
-    </div>
-  </section>
+  <section class="pt-5 pb-1 mt-0 align-items-center d-flex bg-light bg-gradient " style="min-height: 600px; background-size: cover;"></section>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
