--- a/templates/index.html
+++ b/templates/index.html
@@ -11,33 +11,65 @@
       integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
       crossorigin="anonymous"
     />
+    {{ toastr.include_jquery() }} {{ toastr.include_toastr_css() }} {{
+    toastr.message() }}
   </head>
   <body>
-    <section class="pt-5 pb-1 mt-0 align-items-center d-flex bg-light bg-gradient " style="min-height: 600px; background-size: cover;">
-      <div class="container text-center mt-1">
-        <h1 class="mb-3">Resume Parser</h1>
-        <p class="mb-5">This resume parser accepts files in the form of .pdf and .docx. [Further explanation of backend.]</p>
+    {{ toastr.include_toastr_js() }}
+    <div class="container text-center mt-1">
+      <br />
+      <h1 class="mb-3">Resume Parser</h1>
+      <p class="mb-5">
+        This resume parser accepts files in the form of .pdf and .docx. [Further
+        explanation of backend.]
+      </p>
+    </div>
+    <div class="container text-center mt-1">
+      <form
+        class="form-inline ml-auto"
+        id="resumeForm"
+        enctype="multipart/form-data"
+        method="POST"
+      >
+        {{ form.hidden_tag() }}
+        <input
+          class="form-control-file btn btn-outline-success my-2 my-sm-0"
+          type="file"
+          id="file"
+          name="file"
+          type="file"
+          accept=".pdf,.docx"
+        />
+        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">
+          Upload Resume
+        </button>
+      </form>
+    </div>
+    <section
+      class="pt-5 pb-1 mt-0 align-items-center d-flex bg-light bg-gradient"
+      style="min-height: 50px; background-size: cover"
+    >
+      <div class="container text-center mt-1" style="display: {{display}}">
         <form class="d-flex">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+          <input
+            class="form-control me-2"
+            type="search"
+            placeholder="Search"
+            aria-label="Search"
+          />
           <button class="btn btn-outline-success" type="submit">Search</button>
         </form>
       </div>
     </section>
-    <section class="pt-5 pb-1 mt-0 align-items-center d-flex bg-light bg-gradient" style="min-height: 50px; background-size: cover;">
-    <div class="container text-center mt-1">
-        <form class="form-inline ml-auto" id="resumeForm" enctype="multipart/form-data">
-            <input class="form-control-file btn btn-outline-success my-2 my-sm-0" type="file" id="resumeFile" name="'resume" accept=".pdf,.docx"/>
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Parse Resume</button>
-        </form>
-    <div id="loading" style="display: none">
-        <p>Processing...</p>
-    </div>
-    <div id="parsed-resume" style="display: none">
-      <h2>Parsed Resume</h2>
-      <ul id="resume-details"></ul>
-    </div>
-  </section>
-  <section class="pt-5 pb-1 mt-0 align-items-center d-flex bg-light bg-gradient " style="min-height: 270px; background-size: cover;"></section>
+    <section
+      class="pt-5 pb-1 mt-0 align-items-center d-flex bg-light bg-gradient"
+      style="min-height: 50px; background-size: cover"
+    >
+      <div class="container text-center mt-1" style="display: {{display}}">
+        <h2>Parsed Resume</h2>
+        <p>{{data}}</p>
+      </div>
+    </section>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
