--- a/templates/index.html
+++ b/templates/index.html
@@ -20,8 +20,10 @@
       <br />
       <h1 class="mb-3">Resume Parser</h1>
       <p class="mb-5">
-        This resume parser accepts files in the form of .pdf and .docx. [Further
-        explanation of backend.]
+        This resume parser accepts .pdf, .docx, and .txt files. Click the
+        'Browse...' button to select a file and upload to have your resume
+        parsed. A search bar will appear which will let you highlight parsed
+        information.
       </p>
     </div>
     <div class="container text-center mt-1">
@@ -30,6 +32,7 @@
         id="resumeForm"
         enctype="multipart/form-data"
         method="POST"
+        action="{{ url_for('index') }}"
       >
         {{ form.hidden_tag() }}
         <input
@@ -38,7 +41,7 @@
           id="file"
           name="file"
           type="file"
-          accept=".pdf,.docx"
+          accept=".pdf,.docx,.txt"
         />
         <button class="btn btn-outline-success my-2 my-sm-0" type="submit">
           Upload Resume
@@ -49,27 +52,36 @@
       class="pt-5 pb-1 mt-0 align-items-center d-flex bg-light bg-gradient"
       style="min-height: 50px; background-size: cover"
     >
-      <div class="container text-center mt-1" style="display: {{display}}">
-        <form class="d-flex">
+      <div class="container text-center mt-1" style="display: {{ display }}">
+        <h2>Parsed Resume</h2>
+        <br />
+        <form method="POST" action="{{ url_for('search') }}" class="d-flex">
+          {{ form.hidden_tag() }}
           <input
             class="form-control me-2"
             type="search"
             placeholder="Search"
             aria-label="Search"
+            name="searched"
           />
           <button class="btn btn-outline-success" type="submit">Search</button>
         </form>
       </div>
     </section>
-    <section
-      class="pt-5 pb-1 mt-0 align-items-center d-flex bg-light bg-gradient"
-      style="min-height: 50px; background-size: cover"
-    >
-      <div class="container text-center mt-1" style="display: {{display}}">
-        <h2>Parsed Resume</h2>
-        <p>{{data}}</p>
-      </div>
-    </section>
+    <div class="container text-center mt-1" style="display: {{ display }}">
+      <ul class="list-group">
+        {% if searched %} Results for '{{ searched }}' {% endif %} {% if data %}
+        {% for key, val in data.items() %}
+        <li
+          class="list-group-item
+          {% if searched %} {{ and }} {% if key.lower().find(searched.lower()) != -1 %} active {% endif %}{% endif %}
+          {% if searched %} {{ and }} {% if val.lower().find(searched.lower()) != -1 %} active {% endif %}{% endif %}"
+        >
+          {{ key.title() }}: {{ val.title() }}
+        </li>
+        {% endfor %} {% endif %}
+      </ul>
+    </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
