Removed config / Final commit

--- a/templates/index.html
+++ b/templates/index.html
@@ -22,8 +22,8 @@
       <p class="mb-5">
         This resume parser accepts .pdf, .docx, and .txt files. Click the
         'Browse...' button to select a file and upload to have your resume
-        parsed. A search bar will appear which will let you highlight parsed
-        information.
+        parsed. A search bar will appear which will let you search and highlight
+        parsed information.
       </p>
     </div>
     <div class="container text-center mt-1">
